--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
+
 }
